# required Point Cloud Library
FIND_PACKAGE( PCL REQUIRED )

LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules )
# OpenCV import
FIND_PACKAGE( OpenCV 4.2 REQUIRED )
FIND_PACKAGE( Eigen3 REQUIRED)

# Header and Library files
ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )

FIND_PACKAGE( CSparse REQUIRED )
INCLUDE_DIRECTORIES( ${CSPARSE_INCLUDE_DIR} )

ADD_EXECUTABLE( dense_mapping DenseMapping.cc )
TARGET_LINK_LIBRARIES( dense_mapping
    ${OpenCV_LIBS} 
    ${PCL_LIBRARIES} )
